--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,10 +38,19 @@ dependencies:
   iconsax: ^0.0.8
   sizer: ^2.0.15
   flutter_point_tab_bar: ^0.2.0
+  flutter_riverpod: ^2.0.2
+  hooks_riverpod: ^2.0.2
+  freezed_annotation: ^2.2.0
+  http: ^0.13.5
+  dio: ^4.0.6
+  flutter_hooks: ^0.18.5+1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  mocktail: ^0.3.0
+  freezed: ^2.2.0
+  build_runner: ^2.2.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -63,7 +72,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - assets/images/illustrator/
+    - assets/images/illustrator/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
