--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,19 +38,17 @@ dependencies:
   iconsax: ^0.0.8
   sizer: ^2.0.15
   flutter_point_tab_bar: ^0.2.0
-  flutter_riverpod: ^2.0.2
-  hooks_riverpod: ^2.0.2
-  freezed_annotation: ^2.2.0
   http: ^0.13.5
   dio: ^4.0.6
-  flutter_hooks: ^0.18.5+1
+  provider: ^6.0.4
+  xml2json: ^5.3.5
+  uuid: ^3.0.6
+  fluttertoast: ^8.1.1
+  percent_indicator: ^4.2.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  mocktail: ^0.3.0
-  freezed: ^2.2.0
-  build_runner: ^2.2.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
